--- a/products.html
+++ b/products.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || Products</title>
+    <title>Tea Spot || Products</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
     />
+    <!-- logo -->
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon">
     <!-- custom css -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -122,7 +124,7 @@
         <!-- end of social icons -->
         <h4 class="footer-text">
           &copy; <span id="date"></span>
-          <span class="company">tea station</span>
+          <span class="company">tea spot</span>
           all rights reserved
         </h4>
       </div>
